After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 590751 - OPTIONS * not supported in the server side
OPTIONS * not supported in the server side
Status: RESOLVED FIXED
Product: libsoup
Classification: Core
Component: HTTP Transport
2.26.x
Other Linux
: Normal normal
: ---
Assigned To: libsoup-maint@gnome.bugs
libsoup-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2009-08-04 16:44 UTC by J. David Ibáñez
Modified: 2009-08-09 15:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Support "OPTIONS *" in SoupServer (10.46 KB, patch)
2009-08-04 23:53 UTC, Dan Winship
none Details | Review

Description J. David Ibáñez 2009-08-04 16:44:31 UTC
The server sends a "400 Bad Request" response for the valid request:

  OPTIONS * HTTP/1.1
  Host: localhost

Apparently it does not like the "*" request uri, though it conforms to the
HTTP specification.
Comment 1 Dan Winship 2009-08-04 23:53:27 UTC
Created attachment 139916 [details] [review]
Support "OPTIONS *" in SoupServer

Does this work for you?
Comment 2 J. David Ibáñez 2009-08-05 16:15:36 UTC
(In reply to comment #1)
> Created an attachment (id=139916) [edit]
> Support "OPTIONS *" in SoupServer
> 
> Does this work for you?
> 

It works, thanks.

PS: bugzilla did not send an email to me, so I saw your patch just few minutes
ago
Comment 3 Dan Winship 2009-08-09 15:03:07 UTC
committed