Support "OPTIONS *" in SoupServer

Update soup-message-server-io.c to allow "*" in a Request-Line, and
update SoupServer and SoupAuthDomain methods and docs to deal with it.
For backward-compatibility, requests to "*" are NOT passed to the
default handler; you must explicitly register a handler for "*".

http://bugzilla.gnome.org/show_bug.cgi?id=590751